--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body{
 .img-container img{
   width: inherit;
   height: 110px;
+  border:5px solid gray;
   border-radius:50%;
   object-fit: cover;
   position:absolute;
